[package]
name = "plant_cam"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.17"
simple_logger = "4.0"
confy = "0.5.1"
serde = { version = "1.0", features = ["derive"] }
image = "0.23"
chrono = "0.4"

[dependencies.nokhwa]
version = "0.9.2"
features = ["input-v4l", "input-msmf"]
